--- a/EmailSender/package.json
+++ b/EmailSender/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
     "nodemailer": "^6.7.2"
